--- a/smart_chat/requirements.txt
+++ b/smart_chat/requirements.txt
@@ -4,4 +4,6 @@ Jinja2==3.1.2
 click==8.1.7
 itsdangerous==2.1.2
 MarkupSafe==2.1.3
-requests==2.31.0 
+requests==2.31.0
+pycryptodome==3.19.0
+xmltodict==0.13.0 
